@@ -90,6 +90,8 @@ notewidth = (\quartwidth + \wholewidth) / 2.0;
 % ugh
 barsize = \staffheight;
 rulethickness = \staffline;
+
+% stem should be thinner?
 stemthickness = \staffline;
 
 
@@ -103,11 +105,24 @@ castingalgorithm = \Gourlay;
 
 %{
 Ross. page 151
-%}
+
 bar_kern = 0.5 * \interline;
 bar_thinkern = 0.75 * \interline;
 barthick_thick = 0.5* \interline;
 barthick_thin = 0.1*\interline;
+Can't be, these are ugly!  Changed to old (TeX) values.
+
+% barline should be thicker!
+
+%}
+
+bar_kern = 3.0 * \staffline;
+bar_thinkern = 3.0 * \staffline;
+barthick_thick = 6.0* \staffline;
+barthick_thin = 1.6*\staffline;
+
+tuplet_thick = 1.0*\staffline;
+volta_thick = 1.6*\staffline;
 
 
 \include "engraver.ly";
