@@ -51,19 +51,9 @@ courante_viola_staff = \type Staff <
 
 \score{
 	\$courante_viola_staff
-	%\paper { \include "scs-paper.ly"; }
 	\paper{
-	        linewidth = 180.\mm;
-		\translator { \BarNumberingStaffContext }
-		\translator{
-			\VoiceContext
-			% add experimental auto-beaming
-			\consists Auto_beam_engraver;
-			beamAuto = 1.;
-			beamAutoEnd8 = "1/4";
-			beamAutoEnd16 = "1/4";
-			beamAutoEnd32 = "1/4";
-		}
+		\include "scs-paper.ly";
+		gourlay_maxmeasures = 4.0;
 	}
 	\midi{ \tempo 4 = 55; }
 	\header{ piece = "Courante"; }
