@@ -63,15 +63,11 @@ menuetto_i_cello_staff = \type Staff <
 
 \score{
 	\$menuetto_i_cello_staff
-	% \paper { \include "scs-paper.ly"; }
 	\paper{
-	        linewidth = 180.\mm;
-		\translator { \BarNumberingStaffContext }
+		\include "scs-paper.ly";
+		gourlay_maxmeasures = 7.0;
 		\translator{
 			\VoiceContext
-			% add experimental auto-beaming
-			\consists Auto_beam_engraver;
-			beamAuto = 1.;
 			beamAutoEnd8 = "3/4";
 		}
 	}
@@ -102,15 +98,11 @@ menuetto_ii_cello_staff = \type Staff <
 
 \score{
 	\$menuetto_ii_cello_staff
-	% \paper { \include "scs-paper.ly"; }
 	\paper{
-	        linewidth = 180.\mm;
-		\translator { \BarNumberingStaffContext }
+		\include "scs-paper.ly";
+		gourlay_maxmeasures = 7.0;
 		\translator{
 			\VoiceContext
-			% add experimental auto-beaming
-			\consists Auto_beam_engraver;
-			beamAuto = 1.;
 			beamAutoEnd8 = "3/4";
 		}
 	}
