@@ -82,8 +82,6 @@ interline 1.5 mul /bracket_v exch def
 bracket_v /bracket_u exch def
 50 /bracket_alpha exch def
 staffheight 4 div /interline exch def
-stafflinethickness 1.2 mul /tuplet_t exch def
-stafflinethickness 2.5 mul /volta_t exch def
 1 setlinecap}
 }
 
